--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "bootstrap": "^5.1.3",
     "next": "^12.0.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "sass": "^1.44.0"
