--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "sass": "^1.44.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "typescript": "^4.5.3"
   }
 }
