--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "next": "^12.0.7",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "sass": "^1.44.0"
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2"
   }
 }
