--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "sass": "^1.44.0"
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2"
   }
 }
