--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "next": "^12.0.7",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "sass": "^1.44.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@types/styled-components": "^5.1.19",
+    "babel-plugin-styled-components": "^2.0.2",
     "typescript": "^4.5.3"
   }
 }
